# server/docs/swagger.yaml
@@ -62,6 +62,18 @@ definitions:
         example: 44
         type: integer
     type: object
+  entities.FavoriteCat:
+    properties:
+      breed:
+        example: Мейн-кун
+        type: string
+      id:
+        example: 7
+        type: integer
+      image_path:
+        example: /images/cat.png
+        type: string
+    type: object
   entities.LoginUserRequest:
     properties:
       email:
@@ -131,7 +143,7 @@ paths:
           description: Успешное получение списка любимых кошек
           schema:
             items:
-              $ref: '#/definitions/entities.Cat'
+              $ref: '#/definitions/entities.FavoriteCat'
             type: array
         "400":
           description: Некорректный идентификатор пользователя
